# Django_ecommerce_project

./: .env.sample  .flake8  .gitignore  README.md  manage.py  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: main_menu.html  post_card.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: categories.json  products.json
catalog/management/commands/: create_groups.py  create_test_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  home.html
catalog/templates/catalog/: product_delete.html  product_detail.html  product_form.html  product_unpublish_confirm.html
catalog/templates/catalog/includes/: main_menu.html
config/: settings.py  settings_sample.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
